# icloudphotonator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANUAL.md  README.md  RELEASE.md  RELEASE_PLAN_2026-04-04.md  iCloudPhotonator.spec  pyproject.toml  setup_app.py
.github/workflows/: build.yml
assets/: iCloudPhotonator.icns
docs/: SPEC_2026-03-21.md  index.html
icloudphotonator/: __init__.py  __main__.py  db.py  dedup.py  i18n.py  importer.py  job.py  logging_config.py  orchestrator.py  persistence.py  photos_preflight.py  resilience.py  scanner.py  settings.py  staging.py  state.py  throttle.py
icloudphotonator/locales/: de.json  en.json
icloudphotonator/ui/: app.py  bridge.py
packaging/: entitlements.plist
scripts/: build_release.sh
tests/: test_app.py  test_basic.py  test_cli.py  test_db.py  test_importer.py  test_job.py  test_logging.py  test_orchestrator.py  test_photos_preflight.py  test_resilience.py  test_resume.py  test_scanner.py  test_state.py  test_throttle.py
